# k8s.io

./: .atlantis.yaml  .gitattributes  .gitignore  .prettierignore  .travis.yml  CONTRIBUTING.md  OWNERS  OWNERS_ALIASES  README.md  SECURITY_CONTACTS  check.py  inventory.yaml  requirements.txt  running-in-community-clusters.md
.github/: dependabot.yml  pull_request_template.md
apps/: OWNERS  README.md
artifacts/: OWNERS  README.md
artifactserver/: .bazelrc  BUILD.bazel  WORKSPACE  go.mod  go.sum  manifest.yaml
artifactserver/cmd/artifactserver/: BUILD.bazel  main.go
artifactserver/tools/: get_workspace_status.sh
audit/: OWNERS  README.md  audit-gcp.sh  audit.sh  check-audit-pr.sh  cncf-org-policy.json  cncf-org-policy.yaml  cncf-org.policy.json  cncf-org.policy.yaml  cncf-org.roles.json  cncf-org.roles.yaml  create-or-update-audit-pr.sh  k8s-infra-dev-cluster-turnup.policy.json  k8s-infra-dev-cluster-turnup.policy.yaml  k8s-infra-dev-cluster-turnup.roles.json  k8s-infra-dev-cluster-turnup.roles.yaml  kubernetes-public-policy.json  kubernetes-public-policy.yaml  kubernetes-public.policy.json  kubernetes-public.policy.yaml  kubernetes-public.roles.json  kubernetes-public.roles.yaml  kubernetes-public.services.json  log.mkd
cert-manager/: OWNERS  README.md  cert-manager.yaml  cert-monitor.yaml  letsencrypt-prod.yaml  letsencrypt-staging.yaml  selfsigning-clusterissuer.yaml
clusters/: .gitignore  README.md
codesearch.k8s.io/: Dockerfile  Makefile  README.md  config.json  deployment.yaml  fetch-repos.py  service.yaml
dns/: Makefile  OWNERS  README.md  build.sh  check-zone.py  (+9 more)
(+37359 files in other folders)
